deploy/k8s/30-discovery-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: careerhub
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: europe-central2-docker.pkg.dev/cleanchargeuk/careerhub/discovery-server:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8761
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: careerhub
spec:
  type: ClusterIP
  selector:
    app: discovery-server
  ports:
    - name: http
      port: 8761
      targetPort: http
