deploy/k8s/31-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: careerhub
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: europe-central2-docker.pkg.dev/cleanchargeuk/careerhub/backend:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "768Mi"
            limits:
              cpu: "750m"
              memory: "1536Mi"

          startupProbe:
            tcpSocket:
              port: 8081
            failureThreshold: 60
            periodSeconds: 5

          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: careerhub
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8081
      targetPort: http
